# toVoxel

./: .gitignore  README.md
src/: CMakeLists.txt  main.cpp
